-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P2
-
Affects Version/s: 11, 16, 17
-
Component/s: hotspot
-
b34
-
Not verified
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8260558 | 17 | Vladimir Ivanov | P2 | Resolved | Fixed | b08 |
| JDK-8260446 | 16.0.1 | Vladimir Ivanov | P2 | Resolved | Fixed | b03 |
| JDK-8260957 | 11.0.12-oracle | Dukebot | P2 | Closed | Fixed | b01 |
| JDK-8263369 | 11.0.12 | Vladimir Ivanov | P2 | Resolved | Fixed | b01 |
- backported by
-
JDK-8260446 C2: Empty expression stack when reexecuting tableswitch/lookupswitch instructions after deoptimization
-
- Resolved
-
-
JDK-8260558 C2: Empty expression stack when reexecuting tableswitch/lookupswitch instructions after deoptimization
-
- Resolved
-
-
JDK-8263369 C2: Empty expression stack when reexecuting tableswitch/lookupswitch instructions after deoptimization
-
- Resolved
-
-
JDK-8260957 C2: Empty expression stack when reexecuting tableswitch/lookupswitch instructions after deoptimization
-
- Closed
-
- duplicates
-
JDK-8258741 Kitchensink.java failed with "assert(stack_base() > limit && limit >= stack_end()) failed: limit is outside of stack"
-
- Closed
-
-
JDK-8258747 SIGSEGV in InterpreterRuntime::exception_handler_for_exception
-
- Closed
-
-
JDK-8258939 Kitchensink.java EXCEPTION_ACCESS_VIOLATION or EXCEPTION_ILLEGAL_INSTRUCTION in JavaThread
-
- Closed
-
-
JDK-8258740 Kitchensink24HStress.java crashed with EXCEPTION_PRIV_INSTRUCTION
-
- Closed
-
-
JDK-8258899 Kitchensink.java EXCEPTION_ILLEGAL_INSTRUCTION in "ReferenceStressModule"
-
- Closed
-
-
JDK-8258849 Kitchensink.java SIGILL/SIGSEGV in ExceptionStressModule
-
- Closed
-
-
JDK-8259259 SIGSEGV in GetCurrentLocationClosure::do_thread
-
- Closed
-
-
JDK-8258646 Kitchensink.java crashed in JavaThread "AllocatorStressModule"
-
- Closed
-
-
JDK-8258636 SharedRuntime::OSR_migration_begin fails "assert((intptr_t*) result < fp()) failed: monitor end should be strictly below the frame pointer"
-
- Closed
-