8259276: C2: Empty expression stack when reexecuting tableswitch/lookupswitch instructions after deoptimization

Reviewed-by: dlong, kvn, thartmann